# law-agent

./: .env.example  .gitignore  README.md  app.py  build_annotation_file.py  build_index.py  evaluate.py  pyproject.toml  transfer.py
data/: crimina_law_china.jsonl  eval_e2e_result.json  eval_result.json  eval_retrieval.json  test_annotated.json  test_e2e.json  test_small.json  test_small_annotated.json
prompts/: answer_generation.txt  answer_generation_streaming.txt  intent_classification.txt  llm_as_judge.txt
src/: annotator.py  bm25_engine.py  config.py  embedding_engine.py  evaluator.py  exceptions.py  faiss_engine.py  generator.py  intent_classifier.py  llm_client.py  logger.py  models.py  prompt_loader.py  reranker.py  retriever.py  session_manager.py
tests/: conftest.py  mocks.py  test_annotator.py  test_bm25_engine.py  test_embedding_engine.py  test_evaluator.py  test_faiss_engine.py  test_generator.py  test_infrastructure.py  test_integration.py  test_intent_classifier.py  test_llm_client.py  test_reranker.py  test_retriever.py  test_session_manager.py
vector_store/: bm25_index.pkl  passage_ids.json
