[project]
name = "law-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "sentence-transformers>=2.4.0",
    "transformers>=4.36.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=9.0.3",
    "docx>=0.2.4",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-pyyaml>=6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
strict = true
python_version = "3.13"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that require model downloads or are slow to run",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
